--- a/buoi 4/Buổi 4 - Thư viện lập trình Turtle - Finished.ipynb
+++ b/buoi 4/Buổi 4 - Thư viện lập trình Turtle - Finished.ipynb
@@ -382,11 +382,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "84b81183",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "t.color('green','yellow')\n",
+    "t.speed(0)\n",
+    "\n",
+    "t.begin_fill()\n",
+    "for i in range(72):\n",
+    "    t.fd(20)\n",
+    "    t.lt(140)\n",
+    "    t.fd(20)\n",
+    "    t.rt(135)\n",
+    "t.end_fill()"
+   ]
   }
  ],
  "metadata": {
