--- a/buoi 5/Buoi 5 - Biến và kiểu dữ liệu.ipynb
+++ b/buoi 5/Buoi 5 - Biến và kiểu dữ liệu.ipynb
@@ -1051,11 +1051,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "46153b67",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = -6.666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "b = 20\n",
+    "x = -b/a\n",
+    "print(\"x =\",x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1067,11 +1080,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f48bed74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = 20\n",
+    "h = 10\n",
+    "solon = (t + h)/2\n",
+    "sobe = (t - h)/2\n",
+    "print(solon,sobe)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1089,11 +1116,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "44beecf0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0 -6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = 1\n",
+    "b1 = 1\n",
+    "c1 = 1\n",
+    "a2 = 3\n",
+    "b2 = 2\n",
+    "c2 = 9\n",
+    "D = a1*b2 - a2*b1\n",
+    "Dx = c1*b2 - c2*b1\n",
+    "Dy = a1*c2 - a2*c1\n",
+    "x = Dx/D\n",
+    "y = Dy/D\n",
+    "print(x,y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1105,11 +1153,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2806f39",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle\n",
+    "\n",
+    "t = turtle.Turtle()\n",
+    "\n",
+    "a = 8\n",
+    "\n",
+    "for i in range(a):\n",
+    "    for i in range(4):\n",
+    "        t.fd(30)\n",
+    "        t.lt(90)\n",
+    "    t.penup()\n",
+    "    t.fd(45)\n",
+    "    t.pendown()"
+   ]
   }
  ],
  "metadata": {
