--- a/buoi 6/Buổi 6 - Thực hành biến và kiểu dữ liệu.ipynb
+++ b/buoi 6/Buổi 6 - Thực hành biến và kiểu dữ liệu.ipynb
@@ -280,6 +280,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2ab522de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 12\n",
+    "S = 0\n",
+    "k = 1\n",
+    "for i in range(a):\n",
+    "    S += k\n",
+    "    k += 1\n",
+    "print(S)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cb29754d",
    "metadata": {},
@@ -293,11 +317,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2f8bc72b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "479001600\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 12\n",
+    "S = 1\n",
+    "k = 1\n",
+    "for i in range(a):\n",
+    "    S *= k\n",
+    "    k += 1\n",
+    "print(S)"
+   ]
   }
  ],
  "metadata": {
