--- a/buoi 8/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi - Finished.ipynb
+++ b/buoi 8/Buổi 8 - Thực hành nhập xuất dữ liệu & chuỗi - Finished.ipynb
@@ -413,11 +413,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a34e349d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập chuỗi:aasd578reqr14we9r8e7\n",
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Nhập chuỗi:\")\n",
+    "k = 0\n",
+    "b = 0\n",
+    "for i in range(10):\n",
+    "    b += k*a.count(str(k)) ## k là những số từ 0 đến \n",
+    "    ## đếm số lượng từng chữ số rồi nhân với giá trị của nó xong cộng vào b\n",
+    "    k += 1\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -431,11 +449,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9305f0f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: abc\n",
+      "cba\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "a_nguoc = a[::-1]\n",
+    "print(a_nguoc)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -469,11 +500,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "714f1412",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hãy nhập vào một chuỗi: Xin Chào\n",
+      "True\n",
+      "Xin Chào\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Hãy nhập vào một chuỗi: \")\n",
+    "print(a.istitle())\n",
+    "print(a.title())"
+   ]
   }
  ],
  "metadata": {
