--- a/buoi 9/Buổi 9 - Cấu trúc điều kiện - Finisheddddddd.ipynb
+++ b/buoi 9/Buổi 9 - Cấu trúc điều kiện - Finisheddddddd.ipynb
@@ -496,11 +496,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "55a41fe7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào năm:10000\n",
+      "2923401\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Nếu nhập trước năm 97 thì số ngày 0\n",
+    "year = int(input(\"Nhập vào năm:\"))\n",
+    "y = 1997\n",
+    "#### nếu năm nhuận thì có 366 ngày, không phải năm nhuận thì có 365 ngày\n",
+    "#### điều kiện để năm nhuận thõa 1 trong 2 điều kiện sau đây: \n",
+    "#### 1 - chia hết cho 400 ~~> y % 400 == 0\n",
+    "#### 2 - chia hết cho 4 nhưng KHÔNG chia hết cho 100 ~~> y % 4 == 0 and a % 100 != 0\n",
+    "tong_ngay = 0\n",
+    "for i in range(year - 1997 + 1): ## cho cái biến y (year) chạy từ năm 1997 đến năm vừa nhập\n",
+    "    ## ví dụ mình nhập vào năm 2000 thì các năm cần chạy là 1997, 1998, 1999, 2000 (4 năm)\n",
+    "    ## phép toán: 2000 - 1997 + 1 ~~> 4\n",
+    "    if (y % 400 == 0 or (y % 4 == 0 and y % 100 != 0)): ## lệnh if sẽ lặp nhiều lần\n",
+    "        tong_ngay += 366\n",
+    "    else:\n",
+    "        tong_ngay += 365\n",
+    "    y += 1\n",
+    "print(tong_ngay)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b07e6707",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào năm:10000\n",
+      "2923401\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = int(input(\"Nhập vào năm:\"))\n",
+    "tong_ngay = 0\n",
+    "if year >= 1997:\n",
+    "    sonamnhuan1 = (year-1996)//4 ## year bằng 2000 thì số năm nhuận bằng 1\n",
+    "    sonamnhuan2 = (year-1900)//100 ## mỗi 100 năm thì năm đó không phải là năm nhuận, số năm nhuận 2 bằng 1 khi year bằng bao nhiêu?\n",
+    "    ## sonamnhuan2 là số lượng năm chia hết cho 4 nhưng chia hết cho 100\n",
+    "    sonamnhuan3 = (year-1600)//400\n",
+    "    ## sonamnhuan3 là số lượng năm chia hết cho 400\n",
+    "    tong_ngay = (year - 1997 + 1)*365 + sonamnhuan1 - sonamnhuan2 + sonamnhuan3\n",
+    "print(tong_ngay)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -512,14 +567,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "056920c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập vào số a:15\n",
+      "Đây không là số chính phương!\n"
+     ]
+    }
+   ],
    "source": [
     "## Số chính phương là một số bình phương của một số nguyên\n",
     "## Ví dụ các số chính phương là 1, 4, 9, 16\n",
-    "## lấy căn ra và kiểm tra coi số đó có phải là số nguyên hay không"
+    "## lấy căn ra và kiểm tra coi số đó có phải là số nguyên hay không\n",
+    "a = int(input(\"Nhập vào số a:\"))\n",
+    "cana = a**0.5 ## cana đang là kiểu số thực\n",
+    "if (int(cana) == cana): \n",
+    "    ## thí dụ 3.5 ~~> làm tròn: 3 != 3.5 ~~> 3.5 không phải số nguyên\n",
+    "    ## thí dụ 3 ~~> làm tròn: 3 == 3 ~~> 3 là số nguyên\n",
+    "    if cana % 2 == 0:\n",
+    "        print(\"Đây là số chính phương và là bình phương của một số chẵn!\")\n",
+    "    else:\n",
+    "        print(\"Đây là số chính phương và là bình phương của một số lẻ!\")\n",
+    "else:\n",
+    "    print(\"Đây không là số chính phương!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "309929f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7.5\n",
+    "b = int(a)\n",
+    "print(b)"
    ]
   },
   {
@@ -538,11 +633,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1c8e7631",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tui đoán số bạn nghĩ là: 50>\n",
+      "Tui đoán số bạn nghĩ là: 75<\n",
+      "Tui đoán số bạn nghĩ là: 62>\n",
+      "Tui đoán số bạn nghĩ là: 68>\n",
+      "Tui đoán số bạn nghĩ là: 71>\n",
+      "Tui đoán số bạn nghĩ là: 73=\n",
+      "Số mình đoán là: 73 trong 6 lần đoán\n"
+     ]
+    }
+   ],
+   "source": [
+    "ghd = 0\n",
+    "ght = 100\n",
+    "sodoan = (ght+ghd)//2\n",
+    "solandoan = 1\n",
+    "tl = input(\"Tui đoán số bạn nghĩ là: \" + str(sodoan))\n",
+    "for i in range(7):\n",
+    "    if tl != \"=\":\n",
+    "        solandoan += 1\n",
+    "        if tl == \">\":\n",
+    "            ghd = sodoan + 1\n",
+    "        elif tl == \"<\":\n",
+    "            ght = sodoan - 1\n",
+    "        sodoan = (ght+ghd)//2\n",
+    "        tl = input(\"Tui đoán số bạn nghĩ là: \" + str(sodoan))\n",
+    "\n",
+    "print(\"Số mình đoán là:\",sodoan,\"trong\",solandoan,\"lần đoán\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -564,13 +690,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2216047d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập cạnh a: 70\n",
+      "Nhập cạnh b: 70\n",
+      "Nhập cạnh c: 100\n",
+      "Đây là tam giác cân!\n",
+      "48.98979485566356\n"
+     ]
+    }
+   ],
    "source": [
-    "## 3 cạnh tạo thành 1 tam giác KHI tổng 2 cạnh bất kỳ phải lớn hơn cạnh còn lại"
+    "## 3 cạnh tạo thành 1 tam giác KHI tổng 2 cạnh bất kỳ phải lớn hơn cạnh còn lại\n",
+    "## t.goto(cặp tọa độ x,y)\n",
+    "import turtle\n",
+    "t = turtle.Turtle()\n",
+    "a = float(input('Nhập cạnh a: '))\n",
+    "b = float(input('Nhập cạnh b: '))\n",
+    "c = float(input('Nhập cạnh c: '))\n",
+    "\n",
+    "if a > b:\n",
+    "    a, b = b, a\n",
+    "if a > c:\n",
+    "    a, c = c, a\n",
+    "if b > c:\n",
+    "    b, c = c, b\n",
+    "\n",
+    "if (a + b > c) and (a + c > b) and (b + c > a) and a > 0 and b > 0 and c > 0:\n",
+    "    if (a == b == c):\n",
+    "        print(\"Đây là tam giác đều!\")\n",
+    "        for i in range(3):\n",
+    "            t.fd(a)\n",
+    "            t.left(120)\n",
+    "    elif (a == b) or (a == c) or (b == c):\n",
+    "        if (a**2 + b**2 == c**2):\n",
+    "            print(\"Đây là tam giác vuông cân!\")\n",
+    "            t.fd(c)\n",
+    "            t.left(135)\n",
+    "            t.fd(a)\n",
+    "            t.left(90)\n",
+    "            t.fd(a)\n",
+    "        else:\n",
+    "            print(\"Đây là tam giác cân!\")\n",
+    "            cb = b\n",
+    "            if (a == b):\n",
+    "                cd = c ## cạnh đáy\n",
+    "            else: ## a không thể bằng c được\n",
+    "                cd = a   \n",
+    "            h = (cb**2 - (cd/2)**2)**0.5\n",
+    "            print(h)\n",
+    "            t.fd(cd)\n",
+    "            t.goto(cd/2,h)\n",
+    "            t.goto(0,0)  \n",
+    "    elif (a**2 + b**2 == c**2):\n",
+    "        print(\"Đây là tam giác vuông!\")\n",
+    "        t.fd(a)\n",
+    "        t.goto(0,b)\n",
+    "        t.goto(0,0)\n",
+    "    else:\n",
+    "        print(\"Đây là tam giác thường!\")\n",
+    "else:\n",
+    "    print(\"Không thể tạo thành tam giác!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c562830",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
