--- a/buoi 19/Buổi 19 - List - Finished.ipynb
+++ b/buoi 19/Buổi 19 - List - Finished.ipynb
@@ -1272,11 +1272,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d7ffb2b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ham(L):\n",
+    "    for i in L:\n",
+    "        if i > 0:\n",
+    "            return i\n",
+    "    return -1\n",
+    "\n",
+    "print(ham([-1,-7,7,1,2,3]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1288,11 +1304,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "03ef7d4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "def timgiatri(L,x):\n",
+    "    m = L[0]\n",
+    "    for i in range(1,len(L)):\n",
+    "        if abs(L[i] - x) > abs(m - x):\n",
+    "            m = L[i]\n",
+    "    return m\n",
+    "\n",
+    "print(timgiatri([5,7,4,42,12,4,5],5))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1314,22 +1347,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "677abefe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 36.67\n"
+     ]
+    }
+   ],
    "source": [
     "## Tuy nhiên, tại mỗi công ty chỉ bán nguyên liệu cho một khách hàng hoặc theo đô-la, hoặc theo Euro\n",
-    "## Tức là một công ty sẽ có 2 giá bán theo dola và euro, khách hàng chỉ được chọn mua theo 1 giá bán"
+    "## Tức là một công ty sẽ có 2 giá bán theo dola và euro, khách hàng chỉ được chọn mua theo 1 giá bán\n",
+    "U = [10,6,8,9,5]\n",
+    "V = [8,7,11,10,5]\n",
+    "n = len(U)\n",
+    "so_dola = 100\n",
+    "so_euro = 100\n",
+    "m = 0\n",
+    "cty_dola = 0\n",
+    "cty_euro = 0\n",
+    "### cách này không cần suy nghĩ gì nhiều, máy lo hết (máy chạy lâu)\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if i != j:\n",
+    "            kl = so_dola/U[i] + so_euro/V[j]\n",
+    "            if kl > m:\n",
+    "                m = kl\n",
+    "                cty_dola = i\n",
+    "                cty_euro = j\n",
+    "print(cty_dola,cty_euro,round(m,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90401e4e",
+   "execution_count": 14,
+   "id": "9c562d0b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "U = [10,6,8,9,5]\n",
+    "V = [8,7,11,10,5]\n",
+    "n = len(U)\n",
+    "so_dola = 100\n",
+    "so_euro = 100\n",
+    "\n",
+    "def timvtmin(L):\n",
+    "    vt = 0\n",
+    "    for i in range(1,len(L)):\n",
+    "        if L[vt] > L[i]:\n",
+    "            vt = i\n",
+    "    return vt\n",
+    "\n",
+    "vt_dola_min = timvtmin(U) ## tìm vị trí của công ty bán rẻ nhất theo Dola\n",
+    "vt_euro_min = timvtmin(V) ## tìm vị trí của công ty bán rẻ nhất theo Euro\n",
+    "\n",
+    "if vt_dola_min != vt_euro_min:\n",
+    "    kg = so_dola/U[vt_dola_min] + so_euro/V[vt_euro_min]\n",
+    "    print(round(kg,2))\n",
+    "else:\n",
+    "    giatri_dola_min = U[vt_dola_min]\n",
+    "    giatri_euro_min = V[vt_euro_min]\n",
+    "    U.pop(vt_dola_min) ## xóa đi công ty có giá min theo dola\n",
+    "    V.pop(vt_euro_min) ## xóa đi công ty có giá min theo euro\n",
+    "    vt_dola_min_nhi = timvtmin(U)\n",
+    "    vt_euro_min_nhi = timvtmin(V)\n",
+    "    giatri_dola_min_nhi = U[vt_dola_min_nhi]\n",
+    "    giatri_euro_min_nhi = V[vt_euro_min_nhi]\n",
+    "    kg1 = so_dola/giatri_dola_min + so_euro/giatri_euro_min_nhi\n",
+    "    kg2 = so_dola/giatri_dola_min_nhi + so_euro/giatri_euro_min\n",
+    "    if kg1 > kg2:\n",
+    "        print(round(kg1,2))\n",
+    "    else:\n",
+    "        print(round(kg2,2))"
+   ]
   }
  ],
  "metadata": {
