--- a/buoi 21/Buổi 21 - Dictionnary - Finished.ipynb
+++ b/buoi 21/Buổi 21 - Dictionnary - Finished.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "af64832c",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
     "for i in ['.', ',', '?', '-', '!', '\"', ':',\"(\",\")\"]:\n",
     "    vanban = vanban.replace(i, '')\n",
     "    \n",
-    "vanban = vanban.split()\n",
+    "vanban = vanban.split() ## ~~> từ dạng chuỗi sang dạng list\n",
     "\n",
     "## vanban dang là một cái list\n",
     "## xây dựng một dictionary D để lưu trữ số lượng từ của các từ trong List\n",
@@ -473,10 +473,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8541b8c3",
+   "execution_count": 7,
+   "id": "86113068",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "D = {\"1\":\"Cơm gà\",\"2\":\"Cơm bò\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8541b8c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Nhập H - hiển thị sản phẩm\n",
+      "Nhập T - thêm sản phẩm\n",
+      "Nhập S - sửa sản phẩm\n",
+      "Nhập X - xóa sản phẩm\n",
+      "Nhập 0 để thoát chương trình\n",
+      "\n",
+      "Nhập lệnh:D\n",
+      "Nhập lệnh:H\n",
+      "----------------\n",
+      "\n",
+      "1:Cơm gà\n",
+      "\n",
+      "----------------\n",
+      "Nhập lệnh:T\n",
+      "Nhập vào ID (nhập 0 để thoát chức năng):Cơm bò\n",
+      "Nhập vào tên sản phẩm:H\n",
+      "Nhập lệnh:H\n",
+      "----------------\n",
+      "\n",
+      "1:Cơm gà\n",
+      "Cơm bò:H\n",
+      "\n",
+      "----------------\n",
+      "Nhập lệnh:T\n",
+      "Nhập vào ID (nhập 0 để thoát chức năng):2\n",
+      "Nhập vào tên sản phẩm:Cơm bò\n",
+      "Nhập lệnh:X\n",
+      "Nhập vào ID (nhập 0 để thoát chức năng):Cơm bò\n",
+      "Bạn có muốn xóa sản phẩm H không? Nếu có nhập C, nếu không nhập bất kỳ:C\n",
+      "Bạn đã xóa sản phẩm!\n",
+      "Nhập lệnh:H\n",
+      "----------------\n",
+      "\n",
+      "1:Cơm gà\n",
+      "2:Cơm bò\n",
+      "\n",
+      "----------------\n",
+      "Nhập lệnh:S\n",
+      "Nhập vào ID (nhập 0 để thoát chức năng):Cơm trứng\n",
+      "ID chưa tồn tại, vui lòng nhập lại!\n",
+      "Nhập vào ID (nhập 0 để thoát chức năng):2\n",
+      "Nhập vào tên sản phẩm mới:Cơm trứng\n",
+      "Nhập lệnh:H\n",
+      "----------------\n",
+      "\n",
+      "1:Cơm gà\n",
+      "2:Cơm trứng\n",
+      "\n",
+      "----------------\n",
+      "Nhập lệnh:0\n"
+     ]
+    }
+   ],
    "source": [
     "### Đầu tiên in ra các nút chức năng:\n",
     "#### Nhập H - hiển thị sản phẩm\n",
@@ -507,7 +575,65 @@
     "###### Kêu cầu người dùng nhập vào ID (nếu nhập ID là 0 thì thoát chức năng)\n",
     "###### Nếu người dùng nhập ID chưa tồn tại, yêu cầu người dùng nhập lại cho đến nhập ID đã tồn tại\n",
     "###### Nếu người dùng nhập ID đã tồn tại, hỏi người dùng:\n",
-    "###### Bạn có chắc muốn xóa sản phẩm này không? Nếu có gõ C, ngược lại gõ bất kỳ"
+    "###### Bạn có chắc muốn xóa sản phẩm này không? Nếu có gõ C, ngược lại gõ bất kỳ\n",
+    "\n",
+    "def hienthisanpham(D):\n",
+    "    print(\"----------------\")\n",
+    "    print()\n",
+    "    for i in D:\n",
+    "        print(i,\":\",D[i],sep = \"\")\n",
+    "    print()\n",
+    "    print(\"----------------\")\n",
+    "    \n",
+    "def themsanpham(D):\n",
+    "    while True:\n",
+    "        ID = input(\"Nhập vào ID (nhập 0 để thoát chức năng):\")\n",
+    "        if ID == \"0\": return\n",
+    "        if ID not in D: break\n",
+    "        print(\"ID đã tồn tại, vui lòng nhập lại!\")\n",
+    "    name = input(\"Nhập vào tên sản phẩm:\")\n",
+    "    D[ID] = name\n",
+    "    \n",
+    "def suasanpham(D):\n",
+    "    while True:\n",
+    "        ID = input(\"Nhập vào ID (nhập 0 để thoát chức năng):\")\n",
+    "        if ID == \"0\": return\n",
+    "        if ID in D: break\n",
+    "        print(\"ID chưa tồn tại, vui lòng nhập lại!\")\n",
+    "    name = input(\"Nhập vào tên sản phẩm mới:\")\n",
+    "    D[ID] = name\n",
+    "    \n",
+    "def xoasanpham(D):\n",
+    "    while True:\n",
+    "        ID = input(\"Nhập vào ID (nhập 0 để thoát chức năng):\")\n",
+    "        if ID == \"0\": return\n",
+    "        if ID in D: break\n",
+    "        print(\"ID chưa tồn tại, vui lòng nhập lại!\")\n",
+    "    xacnhan = input(\"Bạn có muốn xóa sản phẩm \" + D[ID] + \" không? Nếu có nhập C, nếu không nhập bất kỳ:\")\n",
+    "    if xacnhan.lower() == \"c\":\n",
+    "        D.pop(ID)\n",
+    "        print(\"Bạn đã xóa sản phẩm!\")\n",
+    "\n",
+    "print('''\n",
+    "Nhập H - hiển thị sản phẩm\n",
+    "Nhập T - thêm sản phẩm\n",
+    "Nhập S - sửa sản phẩm\n",
+    "Nhập X - xóa sản phẩm\n",
+    "Nhập 0 để thoát chương trình\n",
+    "''')\n",
+    "\n",
+    "while True:\n",
+    "    a = input(\"Nhập lệnh:\")\n",
+    "    if a == \"H\":\n",
+    "        hienthisanpham(D)\n",
+    "    elif a == \"T\":\n",
+    "        themsanpham(D)\n",
+    "    elif a == \"S\":\n",
+    "        suasanpham(D)\n",
+    "    elif a == \"X\":\n",
+    "        xoasanpham(D)\n",
+    "    elif a == \"0\":\n",
+    "        break"
    ]
   }
  ],
