--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -17,7 +17,8 @@
     }
    ],
    "source": [
-    "print(\"hello\")"
+    "print(\"hello\")\n",
+    "print(\"Đây là file demo!\")"
    ]
   }
  ],
